# Parallelism-theory

task 1/: CMakeLists.txt
task1/: CMakeLists.txt  README.md  main.cpp  time_test.cc
task2/: 1.cc  2.cc  3.cc  CMakeLists.txt  hello.cc  linear_prog1.cc  linear_prog2.cc  main.cc
task2/linear_programs/: linear_prog1.cc  linear_prog2.cc  linear_prog3.cc
task2/parallel_programs/: 1.cc  1_2.cc  2.cc  2_2.cc  3.cc  3_2.cc  3_3.cc  3_dynamic.cc  3_guided.cc
task3/: CMakeLists.txt
task3/task1/: 1.cc
task3/task2/: main.cc
task6/: 2.cc  prog2.cc  prog3.cc
